1. 화살표 이미지 추가 2. position 변경 	- [menu-wrapper]: absolute -> fixed 	- [page-slider]: absolute -> fixed 3. overflow:hidden 삭제 	- [cm-image-wrapper]

--- a/webcatalog.css
+++ b/webcatalog.css
@@ -21,7 +21,7 @@ li {
 }
 .menu-wrapper {
 	top:0;
-	position:absolute;
+	position:fixed;
 	background-image: url(img/top_bg.png);
 	height:50px;
 	width:100%;
@@ -77,7 +77,7 @@ li {
 }	
 #page-slider {
 	z-index:10;
-	position:absolute;
+	position:fixed;
 	width:100%;
 	height:20px;
 	top:50px;
@@ -165,7 +165,6 @@ li {
 	width:0px !important;
 }
 #cm-image-wrapper {
-	overflow:hidden;
 	position:relative;
 	margin-left:auto;
 	margin-right:auto;
